--- a/setup_ngrok.ipynb
+++ b/setup_ngrok.ipynb
@@ -42,7 +42,7 @@
       },
       "outputs": [],
       "source": [
-        "# Install library\n",
+        "# Installing library\n",
         "! sudo apt-get --assume-yes update\n",
         "! sudo apt-get --assume-yes install build-essential\n",
         "# OpenCV\n",
